@@ -39,7 +39,7 @@ RUN_AWS_EKS=true
 # Step 1. Building a Docker image
 #
 
-DOCKER_HIVE_IMG=${DOCKER_HIVE_IMG:-mr3project/hive3:1.1}
+DOCKER_HIVE_IMG=${DOCKER_HIVE_IMG:-mr3project/hive3:1.2}
 DOCKER_HIVE_FILE=${DOCKER_HIVE_FILE:-Dockerfile}
 
 DOCKER_HIVE_WORKER_IMG=${DOCKER_HIVE_WORKER_IMG:-$DOCKER_HIVE_IMG}
@@ -52,7 +52,7 @@ DOCKER_ATS_IMG=mr3project/ats-2.7.7
 DOCKER_ATS_FILE=Dockerfile
 
 # do not use a composite name like hive@RED, hive/red0@RED (which results in NPE in ContainerWorker)
-DOCKER_USER=hive
+DOCKER_USER=root
 
 #
 # Step 2. Configuring Pods
@@ -60,6 +60,8 @@ DOCKER_USER=hive
 
 MR3_NAMESPACE=hivemr3
 MR3_SERVICE_ACCOUNT=hive-service-account
+MASTER_SERVICE_ACCOUNT=master-service-account
+WORKER_SERVICE_ACCOUNT=worker-service-account
 CONF_DIR_CONFIGMAP=hivemr3-conf-configmap
 
 # CREATE_KEYTAB_SECRET specifies whether or not to create a Secret from key/*.
@@ -159,6 +161,8 @@ TOKEN_RENEWAL_HDFS_ENABLED=false
 #
 # Step 7. Additional settings
 #
+
+CREATE_PROMETHEUS_SERVICE=false
 
 # Logging level 
 # TODO: Currently LOG_LEVEL does not update the logging level of MR3.
