@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: hivemr3
+  namespace: {{ .Release.Namespace }}
   name: worker-role
 rules:
 - apiGroups: [""]
