@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: hivemr3
+  namespace: {{ .Release.Namespace }}
   name: {{ .Values.name.mr3.workerServiceAccount }}
