@@ -43,7 +43,7 @@ spec:
         hostnames:
         - "pl"
       containers:
-      - image: mr3project/hive3:1.1
+      - image: mr3project/hive3:1.2
         command: ["/opt/mr3-run/hive/metastore-service.sh"]
         args: ["start", "--kubernetes"]
         imagePullPolicy: Always
